syntax = "proto3";

package product;

option go_package = "grpc-demo/productpb";

message Product {
  int32 id = 1;
  string name = 2;
  double usdPerUnit = 3;
  string unit = 4;
}